# ROCKET

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: lint.yml
.github/workflows/: lint.yml  mypy.yml  publish.yml  test.yml
notebooks/: Feb17_Screen_L2_Analysis.ipynb  Mar242024_SigmaA_AnalyticalRefinement.ipynb  rocket_screen_plot_AF.ipynb  save_truesigmas.ipynb
rocket/: __init__.py  base.py  coordinates.py  dataset.py  helper.py  msacluster_utils.py  mse.py  pytorchlightning.py  realspace.py  realspace_utils.py  refinement.py  refinement_config.py  refinement_cryoem.py  refinement_mse.py  refinement_utils.py  refinement_xray.py  runner.py  sigmaa.py  structurefactors.py  targets.py  utils.py
rocket/cryo/: structurefactors.py  targets.py  utils.py
rocket/llg/: __init__.py  structurefactors.py  targets.py  utils.py
rocket/preprocessing_scripts/: preprocessing_readme.md  rocket_preprocessing.py
rocket/scripts/: LLGloss_noAF2.py  cryo_test_refinement.py  iterate_nobatching.py  iterate_rbr.py  iterate_rbr_argparse.py  iterate_rbr_argparse_L2loss.py  iterate_rbr_argparse_L2loss_allbiases.py  iterate_rbr_argparse_L2loss_pair.py  iterate_rbr_argparse_L2loss_startfromrefined.py  iterate_rbr_argparse_L2loss_startfromrefined_temp.py  iterate_rbr_argparse_plddtgrads.py  iterate_rbr_argparse_plot.py  iterate_rbr_notensorboard.py  iterate_rbr_notensorboard_v2.py  iterate_rbr_notensorboard_v3.py  iterate_rbr_notensorboard_v3_restore.py  iterate_rbr_v3_argparse.py  iterate_update1.py  iterate_update1_FtrueMSE.py  iterate_update1_MSE.py  minhuan_screen.py  mse_optimize.py  perresidue_shift.py  pymol_ensembles.py  run_config.py  run_msacluster.py  run_msascore.py  run_mse.py  run_phase1.py  run_phase1andphase2.py  run_plddtoptimize.py  run_pred_save_dict.py  run_preprocess.py  run_pretrained_openfold.py  run_refine.py  screen_L2argparse_params.py  test_af2rank.py  test_af2rank_llg.py  test_memory_af2.py
rocket/scripts/archived_scripts/: run_phase1.py  run_phase1andphase2.py  run_plddtoptimize.py
rocket/xtal/: __init__.py  structurefactors.py  targets.py  utils.py
scripts/: iterate_rbr_argparse.py  iterate_rbr_argparse_plot.py  run_pred_save_dict.py  run_pretrained_openfold.py  screen_3hak_withsolvent_L2_resolcut.py  screen_argparse_params.py
test/: conftest.py
test/unit/: test_coordinates.py  test_cryo_structurefactors.py  test_cryo_utils.py  test_refinement_utils.py  test_utils.py  test_xtal_structurefactors.py  test_xtal_utils.py
tests/llg/: test_utils.py
