[build-system]
# Specifies that setuptools is used to build the package
requires = ["setuptools>=61.0"] # Use a reasonably modern version of setuptools
build-backend = "setuptools.build_meta"

[project]
# Core project metadata (mostly replaces setup() arguments)
name = "rocket"
# Use dynamic versioning to read from your VERSION file
dynamic = ["version"]
description = "Refining Openfold predictions with Crystallographic Likelihood Targets"
readme = "README.md" # Assuming you have a README.md, otherwise adjust or remove
requires-python = ">=3.10" # Specify your minimum supported Python version, adjust if needed
license = { file = "LICENSE" } 
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
keywords = ["bioinformatics", "protein structure", "openfold", "crystallography", "refinement"] # Optional: Add relevant keywords
classifiers = [ # Optional: PyPI classifiers, see https://pypi.org/classifiers/
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "scikit-bio",
    "ruff",
    "loguru",
    "SFcalculator-torch>=0.2.2",
    "matplotlib",
    "polyleven",
    "scikit-learn",
    "seaborn",
]

[project.urls]
Homepage = "https://github.com/alisiafadini/ROCKET"
Repository = "https://github.com/alisiafadini/ROCKET"

[project.scripts]
"rk.predict" = "rocket.scripts.run_pretrained_openfold:cli_runopenfold"
"rk.preprocess" = "rocket.scripts.run_preprocess:cli_runpreprocess"
"rk.refine" = "rocket.scripts.run_refine:cli_runrefine"
"rk.config" = "rocket.scripts.run_config:cli_runconfig"
"rk.mse" = "rocket.scripts.run_mse:run_mse_all_datasets"
"rk.msacluster" = "rocket.scripts.run_msacluster:main"
"rk.score" = "rocket.scripts.run_msascore:main"
"rk.plddt" = "rocket.scripts.run_plddtoptimize:main"

[tool.setuptools.dynamic]
version = { file = "rocket/VERSION" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"] # Exclude tests from the installed package

# --- Ruff Linting Configuration ---
[tool.ruff]
target-version = "py310"

# Set the maximum line length. 88 is common (used by Black).
line-length = 88

# Select the rule sets you want to enable.
# A good starting point includes:
# E/W: pycodestyle errors/warnings (style)
# F: Pyflakes (logical errors like unused imports/variables)
# I: isort (import sorting)
# UP: pyupgrade (suggests modern Python syntax)
# B: flake8-bugbear (finds potential bugs and design problems)
# C4: flake8-comprehensions (helps write better comprehensions)
# SIM: flake8-simplify (simplification suggestions)
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]

# Optionally ignore specific rules if they conflict with your style or needs.
# Example: ignore = ["E501"] # To ignore line length errors if you don't want to enforce it strictly yet.
ignore = []

# Exclude directories or files from linting.
# Common examples include virtual environments, build artifacts, etc.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "*.egg-info",
]

[tool.ruff.lint]
[tool.ruff.lint.isort]
known-first-party = ["rocket"] # Tell isort that 'rocket' is your own package

[tool.ruff.format]
preview = true # Enable preview features for the formatter if desired
quote-style = "double"